--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 lang: en
 title: Home
 tagline: Phat Truong Machine Learning Specialist
-email: phattruong@devpanel.com
+email: phattruong.psn@gmail.com
 description: >
   The personal site of Phat Truong, a place to show myself and write blogs
 baseurl: 
